tests/paczka1/small_fuzzy/42058435.err
Error in line 7: oeSBq3 S36 94,1
Error in line 4: lcMnW A179 55,7
Error in line 10: AExDy6q S465 96,1
